--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,17 +1,19 @@
-NEXT_PUBLIC_API_HOST=localhost
-NEXT_PUBLIC_API_PROTOCOL=http
-NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
-NEXT_PUBLIC_NETWORK_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_SHORT_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_ID=5
-NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Ether
-NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=ETH
+NEXT_PUBLIC_API_HOST=unit0-testnet.w8.io
+NEXT_PUBLIC_API_PROTOCOL=https
+NEXT_PUBLIC_STATS_API_HOST=https://unit0-testnet-stats.w8.io
+NEXT_PUBLIC_NETWORK_NAME=unit0-testnet
+NEXT_PUBLIC_NETWORK_SHORT_NAME=unit0-testnet
+NEXT_PUBLIC_NETWORK_ID=88817
+NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Unit0
+NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=Unit0
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
 NEXT_PUBLIC_API_BASE_PATH=/
-NEXT_PUBLIC_APP_HOST=localhost
-NEXT_PUBLIC_APP_PROTOCOL=http
+NEXT_PUBLIC_APP_HOST=unit0-testnet.w8.io
+NEXT_PUBLIC_APP_PROTOCOL=https
 NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs']
-NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8081
+NEXT_PUBLIC_VISUALIZE_API_HOST=https://unit0-testnet-vis.w8.io
 NEXT_PUBLIC_IS_TESTNET=true
-NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=ws
+NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+NEXT_PUBLIC_AD_BANNER_PROVIDER=none
+NEXT_PUBLIC_COLOR_THEME_DEFAULT=dark
