--- a/docker-compose/external-frontend.yml
+++ b/docker-compose/external-frontend.yml
@@ -29,11 +29,11 @@ services:
     links:
       - db:database
     environment:
-        ETHEREUM_JSONRPC_VARIANT: 'ganache'
-        ETHEREUM_JSONRPC_WS_URL: ws://host.docker.internal:8545/
+        ETHEREUM_JSONRPC_VARIANT: 'besu'
+        ETHEREUM_JSONRPC_WS_URL: ws://host.docker.internal:8546/
         INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER: 'true'
         INDEXER_DISABLE_PENDING_TRANSACTIONS_FETCHER: 'true'
-        CHAIN_ID: '1337'
+        CHAIN_ID: '88817'
 
   visualizer:
     extends:
