--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -10,7 +10,7 @@ ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
 # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL=
 # ETHEREUM_JSONRPC_FALLBACK_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_ETH_CALL_URL=
-# ETHEREUM_JSONRPC_HTTP_TIMEOUT=
+ETHEREUM_JSONRPC_HTTP_TIMEOUT=300
 # CHAIN_TYPE=
 NETWORK=
 SUBNETWORK=Awesome chain
@@ -154,7 +154,7 @@ INDEXER_DISABLE_PENDING_TRANSACTIONS_FETCHER=true
 INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_DISABLE_CATALOGED_TOKEN_UPDATER_FETCHER=
 # INDEXER_DISABLE_BLOCK_REWARD_FETCHER=
-# INDEXER_DISABLE_EMPTY_BLOCKS_SANITIZER=
+INDEXER_DISABLE_EMPTY_BLOCKS_SANITIZER=true
 # INDEXER_DISABLE_WITHDRAWALS_FETCHER=
 # INDEXER_CATCHUP_BLOCKS_BATCH_SIZE=
 # INDEXER_CATCHUP_BLOCKS_CONCURRENCY=
