--- a/docker-compose/services/db.yml
+++ b/docker-compose/services/db.yml
@@ -14,10 +14,10 @@ services:
   db:
     image: postgres:15
     user: 2000:2000
-    shm_size: 256m
+    shm_size: 1024m
     restart: always
     container_name: 'db'
-    command: postgres -c 'max_connections=200' -c 'client_connection_check_interval=60000'
+    command: postgres -c 'max_connections=200' -c 'client_connection_check_interval=60000' -c 'max_wal_size=4GB'
     environment:
         POSTGRES_DB: 'blockscout'
         POSTGRES_USER: 'blockscout'
